--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -265,10 +265,9 @@
                         android:layout_marginBottom="@dimen/_10sdp"
                         android:fontFamily="@font/cairo_semibold"
                         android:gravity="center"
-                        android:text="Error"
                         android:textColor="@android:color/holo_red_light"
                         android:textSize="@dimen/_10sdp"
-                        android:visibility="invisible" />
+                        android:visibility="visible" />
 
                     <Button
                         android:id="@+id/signUpBtn"
