--- a/app/src/main/res/layout/fragment_add_location.xml
+++ b/app/src/main/res/layout/fragment_add_location.xml
@@ -146,7 +146,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        android:visibility="0">
 
                         <TextView
                             android:layout_width="match_parent"
