--- a/app/src/main/res/layout/fragment_new_news.xml
+++ b/app/src/main/res/layout/fragment_new_news.xml
@@ -30,6 +30,18 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+                    <include layout="@layout/news_item_model"/>
+
+
+
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/newNewsRV"
                         android:layout_weight="1"
@@ -37,7 +49,7 @@
                         android:layout_height="0dp" />
 
                     <FrameLayout
-                        android:visibility="gone"
+                        android:visibility="visible"
                         android:id="@+id/noInternetLin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -58,7 +70,7 @@
                     </FrameLayout>
 
                     <ProgressBar
-                        android:visibility="gone"
+                        android:visibility="visible"
                         style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                         android:id="@+id/progress"
                         android:layout_width="match_parent"
